--- a/src/app/output-area/output-area.component.html
+++ b/src/app/output-area/output-area.component.html
@@ -33,9 +33,8 @@
                                                 <p class="card-text .card-text-two">
                                                     <span
                                                         *ngFor="let result of finalResult[pointIndex]['two_digit'];let i=index">
-                                                        <span *ngIf="result.count > 1">
-                                                            {{result?.filterKey}}&nbsp;-
-                                                            {{result?.count}}, &nbsp;
+                                                        <span *ngIf="result.count > 1"  class="tw_in">
+                                                            <span>{{result?.filterKey}}</span><span>-</span><span>{{result?.count}},</span>
                                                         </span>
                                                     </span>
                                                 </p>
@@ -52,9 +51,10 @@
                                                 <div class="card-body">
                                                     <p class="card-text">
                                                         <span
-                                                            *ngFor="let result of res.data | orderBy: 'count' : false">{{result?.number}}
-                                                            -
-                                                            {{result.count}}, </span>
+                                                            *ngFor="let result of res.data | orderBy: 'count' : false" class="thr_in">
+                                                            <span>{{result?.number}}</span><span>-</span><span>{{result.count}},</span>
+                                                             </span>
+                                                           
                                                     </p>
                                                 </div>
                                             </div>
@@ -66,9 +66,8 @@
                                                 <p class="card-text">
                                                     <span
                                                         *ngFor="let result of finalResult[pointIndex]['three_digit'];let i=index">
-                                                        <span *ngIf="result.count > 1">
-                                                            {{result?.filterKey}}&nbsp;-
-                                                            {{result?.count}}, &nbsp;
+                                                        <span *ngIf="result.count > 1" class="l_thr_in">
+                                                            <span> {{result?.filterKey}}</span><span>-</span><span> {{result?.count}},</span>
                                                         </span>
                                                     </span>
                                                 </p>
